# canvist

./: .devcontainer.json  .gitignore  Cargo.toml  clippy.toml  deny.toml  devenv.nix  devenv.yaml  dprint.json  knope.toml  readme.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.changeset/: ci-fixes-and-js-package.md  clippy-clean.md  collab-demo-and-tests.md  crate-readmes.md  doc-tests.md  dynamic-line-height.md  edge-cases-and-roundtrips.md  fix-editor-rendering-and-interaction.md  fix-typescript-types.md  from-markdown-and-readme.md  paragraph-splitting.md  pending-style-and-warnings.md  remove-all-unwraps.md  revitalize-project.md  rich-paste-and-tests.md  run-compaction-collab-persistence.md  text-alignment-and-a11y.md  ts-editor-fixes.md  undo-coalescing-and-cursor-hint.md
.github/: pull_request_template.md
.github/actions/devenv/: action.yml
.github/workflows/: ci.yml  playwright.yml  release.yml
.pi/: scheduler.json
crates/canvist/: Cargo.toml  readme.md
crates/canvist/src/: lib.rs
crates/canvist_core/: Cargo.toml  readme.md
crates/canvist_core/src/: action.rs  collaboration.rs  document.rs  event.rs  extension.rs  layout.rs  lib.rs  operation.rs  position.rs  runtime.rs  selection.rs  style.rs
crates/canvist_render/: Cargo.toml  readme.md
crates/canvist_render/src/: canvas.rs  font.rs  lib.rs  renderer.rs  viewport.rs
crates/canvist_test/: Cargo.toml  readme.md
crates/canvist_test/src/: lib.rs
crates/canvist_test/tests/: smoke.rs
crates/canvist_wasm/: Cargo.toml
crates/canvist_wasm/src/: canvas_renderer.rs  dom.rs  layout_bridge.rs  lib.rs
docs/: Cargo.toml  book.toml
docs/src/: api-overview.md  architecture.md  contributing.md  getting-started.md  lib.rs  readme.md  summary.md  testing-capability-matrix.md
docs/src/guide/: extensions.md
setup/editors/vscode/: settings.json
