[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
yrs = "*"
lib0 = "*"
fontdue = "*"
insta = "1"
log = "0.4"
napi = "2"
napi-build = "2"
napi-derive = "2"
owo-colors = "*"
parcel_sourcemap = "2"
readonly = "0.2"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
typed-builder = "0.12"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

canvist = { path = "./crates/canvist", version = "0.0.0" }

[profile.release.package.canvist]
opt-level = "s"
