[package]
name = "canvist_book"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Documentation for the canvist canvas editor"
publish = false

[lints]
workspace = true
