[package]
name = "canvist_book"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Documentation for the canvist canvas editor"

[lints]
workspace = true
