[package]
name = "canvist"
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["wasm", "accessibility", "multimedia", "text-processing", "text-editors"]
documentation = "https://docs.rs/canvist"
edition = "2021"
homepage = "https://github.com/ifiokjr/canvist"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["text", "canvas", "font", "font-rendering"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/canvist"
description = "canvist is a fully typed atomic css compiler for rust, node, deno and the browser"

[dependencies]
fontdue = { workspace = true }
lib0 = { workspace = true }
yrs = { workspace = true }
