[package]
name = "canvist"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation = "https://docs.rs/canvist"
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords = ["text-editor", "canvas", "crdt", "document"]
license.workspace = true
readme = "readme.md"
repository.workspace = true
rust-version.workspace = true
description = "A canvas-based text editor written in Rust — build your own Google Docs"

[dependencies]
canvist_core = { workspace = true }
canvist_render = { workspace = true }

[features]
default = []
wasm = ["dep:canvist_wasm"]

[dependencies.canvist_wasm]
workspace = true
optional = true

[lints]
workspace = true
