[package]
name = "canvist_core"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation = "https://docs.rs/canvist_core"
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords = ["text-editor", "canvas", "crdt", "document"]
license.workspace = true
readme = "readme.md"
repository.workspace = true
rust-version.workspace = true
description = "Core document model, editor operations, and CRDT collaboration for the canvist canvas editor"

[dependencies]
lib0 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
typed-builder = { workspace = true }
unicode-linebreak = { workspace = true }
unicode-segmentation = { workspace = true }
yrs = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
