[package]
name = "canvist_render"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation = "https://docs.rs/canvist_render"
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords = ["text-editor", "canvas", "rendering", "font"]
license.workspace = true
readme = "readme.md"
repository.workspace = true
rust-version.workspace = true
description = "Platform-agnostic rendering traits and text layout for the canvist canvas editor"

[dependencies]
canvist_core = { workspace = true }
fontdue = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
